@@ -1,4 +1,11 @@
 ------------------------------------------------------------------------
+r126 | draeger1 | 2013-07-15 12:28:33 -0700 (Mon, 15 Jul 2013) | 4 lines
+
+
+Fixed randomize_vel command to actually rescale the velocities to the target temperature.
+
+
+------------------------------------------------------------------------
 r125 | draeger1 | 2013-07-15 09:20:09 -0700 (Mon, 15 Jul 2013) | 4 lines
 
 
